# pipe

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  connector_request.yml  feature_request.yml
.github/workflows/: publish.yml  validate.yml
connectors/aisquare-gateway/: README.md  pyproject.toml
connectors/aisquare-gateway/src/aisquare_pipe_gateway/: __init__.py  client.py  sink.py
connectors/aisquare-gateway/tests/: conftest.py  helpers.py  test_client.py  test_compliance.py  test_e2e.py  test_sink.py
connectors/composio/: README.md  pyproject.toml
connectors/composio/src/aisquare_pipe_composio/: __init__.py  client.py  connections.py  connector.py  constants.py  factory.py  files.py  triggers.py
connectors/composio/tests/: conftest.py  helpers.py  test_client.py  test_compliance.py  test_connections.py  test_factory.py  test_files.py  test_sink.py  test_source.py  test_triggers.py
connectors/docusign/: README.md  pyproject.toml
connectors/docusign/src/aisquare_pipe_docusign/: __init__.py  auth.py  client.py  connector.py  constants.py  webhook.py
connectors/docusign/tests/: conftest.py  helpers.py  test_client.py  test_compliance.py  test_connector.py  test_sink.py  test_source.py
connectors/dropbox/: README.md  pyproject.toml
connectors/dropbox/src/aisquare_pipe_dropbox/: __init__.py  client.py  connector.py  constants.py
connectors/dropbox/tests/: conftest.py  helpers.py  test_client.py  test_compliance.py  test_sink.py  test_source.py
connectors/gateway/: README.md  pyproject.toml
connectors/gateway/src/aisquare_pipe_gateway/: __init__.py  connector.py
connectors/gateway/tests/: test_compliance.py  test_e2e.py  test_sink.py
connectors/github/: README.md  pyproject.toml
connectors/github/src/aisquare_pipe_github/: __init__.py  client.py  connector.py  constants.py
connectors/github/tests/: test_client.py  test_compliance.py  test_source.py
connectors/graphify/: README.md  pyproject.toml
connectors/graphify/src/aisquare_pipe_graphify/: __init__.py  connector.py  constants.py  converter.py  engine.py  merger.py  query.py
connectors/graphify/tests/: conftest.py  test_compliance.py  test_converter.py  test_e2e.py  test_engine.py  test_merger.py  test_query.py  test_source.py
connectors/local/: README.md  pyproject.toml
connectors/local/src/aisquare_pipe_local/: __init__.py  client.py  connector.py  constants.py
connectors/local/tests/: conftest.py  helpers.py  test_client.py  test_compliance.py  test_sink.py  test_source.py
connectors/n8n/: README.md  pyproject.toml
connectors/n8n/docker/pipe-n8n/: Dockerfile  README.md  entrypoint.py  test_entrypoint.py
connectors/n8n/docs/: integration.md
connectors/n8n/scripts/: regen_parity_fixtures.py
connectors/n8n/src/aisquare_pipe_n8n/: __init__.py  client.py  connector.py  source.py  spans.py
connectors/n8n/tests/: conftest.py  helpers.py  test_client.py  test_compliance.py  test_source.py
connectors/n8n/tests/parity/: test_sdk_parity.py
connectors/n8n/tests/parity/expected/: branching_finished.json
connectors/n8n/tests/parity/fixtures/: __init__.py
connectors/onedrive/: README.md  pyproject.toml
connectors/onedrive/src/aisquare_pipe_onedrive/: __init__.py  client.py  connector.py  constants.py
connectors/onedrive/tests/: conftest.py  helpers.py  test_client.py  test_compliance.py  test_sink.py  test_source.py
connectors/salesforce/: README.md  pyproject.toml
connectors/salesforce/src/aisquare_pipe_salesforce/: __init__.py  auth.py  client.py  connector.py  constants.py  webhook.py
connectors/salesforce/tests/: conftest.py  helpers.py  test_client.py  test_compliance.py  test_connector.py  test_sink.py  test_source.py
docker/pipe-n8n/: Dockerfile  README.md  entrypoint.py  test_entrypoint.py
docs/: n8n-integration.md
examples/: mock_pipeline.py
scripts/: regen_parity_fixtures.py
src/aisquare/pipe/: __init__.py  errors.py
src/aisquare/pipe/cli/: __main__.py  main.py  validate.py
src/aisquare/pipe/core/: connector.py  envelope.py  merge.py  pipeline.py  registry.py  types.py
src/aisquare/pipe/mcp/: server.py
src/aisquare/pipe/testing/: compliance.py  fixtures.py  hygiene.py  mock_connectors.py  validation.py
tests/: test_cli_validate.py  test_compliance.py  test_connector_contracts.py  test_envelope.py  test_hygiene.py  test_merge.py  test_pipeline.py  test_registry.py  test_type_matcher.py  test_validation.py
tests/parity/: test_sdk_parity.py
tests/parity/expected/: errored_finished.json  linear_finished.json
