[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aisquare-pipe"
version = "0.1.1"
description = "Universal anything-to-anything connector framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "AISquare Studio"}]
keywords = ["connectors", "data-pipeline", "etl", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/AISquare-Studio/pipe"
Repository = "https://github.com/AISquare-Studio/pipe"
Documentation = "https://github.com/AISquare-Studio/pipe#readme"
Issues = "https://github.com/AISquare-Studio/pipe/issues"
Changelog = "https://github.com/AISquare-Studio/pipe/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
popular = [
    "aisquare-pipe-local",
    "aisquare-pipe-dropbox",
    "aisquare-pipe-onedrive",
]
full = [
    "aisquare-pipe[popular]",
    "aisquare-pipe-salesforce",
    "aisquare-pipe-docusign",
    "aisquare-pipe-composio",
]

[project.scripts]
pipe = "aisquare.pipe.cli.main:cli"

[project.entry-points."aisquare_pipe.connectors"]
mock-source = "aisquare.pipe.testing.mock_connectors:MockSource"
mock-sink = "aisquare.pipe.testing.mock_connectors:MockSink"

[project.entry-points."aisquare_pipe.converters"]
mock-converter = "aisquare.pipe.testing.mock_connectors:MockConverter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aisquare.pipe" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
