[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aisquare-pipe-docusign"
version = "0.1.0"
description = "DocuSign connector for aisquare.pipe"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "A-Square"}]
dependencies = [
    "aisquare-pipe>=0.1.0",
    "docusign-esign>=4.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy", "responses"]

[project.entry-points."aisquare_pipe.connectors"]
docusign-source = "aisquare_pipe_docusign.connector:DocusignSource"
docusign-sink = "aisquare_pipe_docusign.connector:DocusignSink"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
