[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aisquare-pipe-docusign"
version = "0.1.0"
description = "DocuSign eSignature connector for aisquare.pipe"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "A-Square"}]
dependencies = [
    "aisquare-pipe>=0.1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.entry-points."aisquare_pipe.connectors"]
docusign-source = "aisquare_pipe_docusign.connector:DocuSignSource"
docusign-sink = "aisquare_pipe_docusign.connector:DocuSignSink"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
