[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aisquare-pipe-onedrive"
version = "0.1.0"
description = "OneDrive connector for aisquare.pipe"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "A-Square"}]
dependencies = [
    "aisquare-pipe>=0.1.0",
    "azure-identity>=1.15.0",
    "requests>=2.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.entry-points."aisquare_pipe.connectors"]
onedrive-source = "aisquare_pipe_onedrive.connector:OneDriveSource"
onedrive-sink = "aisquare_pipe_onedrive.connector:OneDriveSink"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
